--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -68,6 +68,8 @@
     <%= render "chose_seats_and_more_partial/tickets" %>
     <%= render "chose_seats_and_more_partial/bomboniere" %>
     <%= render "chose_seats_and_more_partial/credit_card" %>
+    <%= render "chose_seats_and_more_partial/google_play" %>
+    <%= render "chose_seats_and_more_partial/clube_uol" %>
   </div>
   <div class="container-back-skip">
     <div class="container-button-back"><button class="button-back">VOLTAR</button></div>
@@ -77,3 +79,10 @@
   </div>
 </div>
 <%= render "chose_seats_and_more_svg_partial/svg_warning" %>
+<div class="ticket-gift-card-info-inner">
+  <span>Insira o código do Vale-Presente, Cupom de Desconto ou Promocode.</span>
+  <div class="container-input-cpf-cnpj-button-apply-ticket-gift-card">
+    <input type="text" placeholder="Insira o código aqui" class="input-insert-cod-ticket-gift-card">
+    <button class="button-apply-ticket-gift-card">APLICAR</button>
+  </div>
+</div>
