--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -11,6 +11,7 @@
     </div>
     <span class="span-types-tickets">TIPOS DE INGRESSOS</span>
     <span class="span-bomboniere">BOMBONIERE</span>
+    <span class="span-payment">PAGAMENTO</span>
     <div class="line-white-2"></div>
     <div class="div-svg-bomboniere">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
