--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>IngressoProject</title>
+    <link rel="icon" href="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1714490807/ingresso-icon_nn8qoy.jpg">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
