--- a/app/views/chose_seats_and_more_partial/_order_summary.html.erb
+++ b/app/views/chose_seats_and_more_partial/_order_summary.html.erb
@@ -20,7 +20,7 @@
           </div>
           <div class="container-region-room">
             <span class="span-name-cinema"></span>
-            <span class="span-room">SALA 1</span>
+            <span class="span-room">SALA <%= @room_number %></span>
           </div>
         </div>
       </div>
