--- a/app/views/admin/cinema_movies/_form.html.erb
+++ b/app/views/admin/cinema_movies/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :cinema_id, label: 'Cinema Id' %>
     <%= f.input :region_id, label: 'Region Id' %>
     <%= f.input :screening_schedule %>
+    <%= f.input :room, label: 'Sala Numero' %>
   </div>
   <div class="form-actions">
     <%= f.button :submit, 'Salvar', class: 'btn btn-info' %>
