--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -468,6 +468,164 @@ body {
   }
 }
 
+.container-chose-region-after-clicked {
+  position: absolute;
+  left: -14px;
+  top: 49px;
+  font-size: 12px;
+  z-index: 10;
+  background-color: rgb(22, 27, 34);
+  display: flex;
+  gap: 10px;
+  padding: 25px 25px 45px 25px;
+  z-index: 15;
+  width: 38rem;
+}
+
+.container-left-chose-region-after-clicked {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding-right: 10px;
+  width: 60%;
+}
+
+.container-right-chose-region-after-clicked {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 0px;
+
+  >h1 {
+    font-size: 17px;
+    margin-bottom: 20px;
+  }
+}
+
+.container-last-places-all {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.container-last-places {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  cursor: pointer;
+
+  >svg {
+    width: 20px;
+    fill: rgb(152 170 236);
+  }
+
+  >span {
+    font-size: 15px;
+    color: rgb(152 170 236);
+  }
+}
+
+.container-h1-update-location {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  >h1 {
+    font-size: 17px;
+    margin-bottom: 0px;
+  }
+}
+
+.container-svg-gps-update-location {
+  display: flex;
+  align-items: center;
+
+  >svg {
+    width: 23px;
+    height: 23px;
+    fill: rgb(152 170 236);
+  }
+
+  >span {
+    font-size: 15px;
+    color: rgb(152 170 236);
+  }
+}
+
+.container-select-state-city {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.container-select-state {
+
+  >select {
+    width: 100%;
+    padding: 10px 5px;
+    font-size: 16px;
+    user-select: none;
+    border-radius: 5px;
+    // -webkit-appearance: none;
+    // appearance: none;
+  }
+
+  >select:focus {
+    outline: none;
+  }
+}
+
+.container-select-city {
+
+  >select {
+    width: 100%;
+    padding: 10px 5px;
+    font-size: 16px;
+    user-select: none;
+    border-radius: 5px;
+  }
+
+  >select:focus {
+    outline: none;
+  }
+}
+
+.container-change-city-button {
+  display: flex;
+
+  >button {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 9px;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(to right, #3255e2, #6c04ba);
+    color: #fff;
+  }
+
+  >button:hover {
+    background: linear-gradient(to right, #3255e286, #6b04ba88);
+    color: #e7e7e79c;
+  }
+}
+
+.svg-sort-up-chose-region {
+  position: absolute;
+  left: 3px;
+  top: 38px;
+  width: 30px !important;
+  fill: rgb(22, 27, 34) !important;
+}
+
+.container-line-between-left-right {
+  border-right: 1px solid rgb(102 102 102);
+}
+
+.nav-ul-li-main {
+  position: relative;
+}
+
 .dashboard-main {
   display: flex;
   padding: 15px 70px;
