--- a/app/views/layouts/store/_chose_region.html.erb
+++ b/app/views/layouts/store/_chose_region.html.erb
@@ -2,3 +2,48 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" class="mx-0 my-auto h-7 w-7 fill-[#DDE3F8] pr-[6px] md:h-9 md:w-9"><path d="M33.118 52.733c.924-.936 1.653-1.527 2.995-2.983 2.676-2.902 1.103-1.022 6.519-6.794 5.415-5.772 6.835-9.499 6.835-14.612C49.467 18.307 42.045 9 32.053 9S14.49 18.307 14.49 28.344c0 4.944 2.233 9.007 6.914 14.475 4.68 5.469 3.588 3.963 6.45 6.931 1.316 1.364 1.674 1.699 2.6 2.616.193.192 1.387 1.144 1.549 1.3.178-.176.897-.71 1.116-.933zM10.333 27.49c0-12.236 9.484-22.156 22.025-22.156s21.309 9.92 21.309 22.156c0 6.3-2.697 12.832-7.821 17.824-1.18 1.285-3.84 4.32-6.72 7.253a310 310 0 0 1-3.893 3.915c-.549.54-.99.965-1.313 1.264q-.272.251-.45.4c-.572.474-.73.505-1.358.52-1.002.023-.947-.04-6.672-5.806-3.062-3.084-5.751-5.897-6.737-7.074-5.106-5.636-8.37-12.198-8.37-18.296M31.96 39c-5.575 0-10.626-5.102-10.626-10.973 0-5.87 5.051-10.36 10.626-10.36s10.708 4.49 10.708 10.36S37.535 39 31.96 39m.036-4c3.61 0 6.672-3.081 6.672-6.878s-3.062-6.455-6.67-6.455c-3.61 0-6.664 2.571-6.664 6.368S28.387 35 31.995 35z"></path></svg>
   <p class="paragraph-region-chose">Campinas</p>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-sort-up-chose-region">
+  <path d="M182.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/>
+</svg>
+<div class="container-chose-region-after-clicked">
+  <div class="container-left-chose-region-after-clicked">
+    <div class="container-h1-update-location">
+      <h1>Você está em: São Paulo</h1>
+      <div class="container-svg-gps-update-location">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" class="injected-svg" data-src="/images/gps.svg" xmlns:xlink="http://www.w3.org/1999/xlink" role="img">
+          <path fill-rule="evenodd" d="M53.377 12.827L39.722 54.315c-.625 1.9-3.315 1.955-4.02.084l-7.316-19.406-19.234-7.165c-1.879-.7-1.828-3.352.077-3.98l41.45-13.68c1.66-.547 3.24 1.011 2.698 2.66zm-5.531 2.601l-32.07 9.846c-.61.187-.62.515-.032.733L32 32l5.415 15.153c.213.595.552.584.75-.006l10.418-30.973c.2-.598-.12-.935-.737-.746z"></path>
+        </svg>
+        <span>Atualizar localização por GPS</span>
+      </div>
+    </div>
+    <div class="container-select-state-city">
+      <div class="container-select-state">
+        <select name="" class="select-state-chose-region">
+          <option value="Estado">Estado</option>
+          <option value="Acre">Acre</option>
+          <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+          <option value="Mato Grosso">Mato Grosso</option>
+          <option value="São Paulo">São Paulo</option>
+          <option value="Alagoas">Alagoas</option>
+          <option value="Amazonas">Amazonas</option>
+        </select>
+      </div>
+      <div class="container-select-city">
+        <select name="" class="select-city-chose-region">
+          <option value="Cidade">Cidade</option>
+        </select>
+      </div>
+      <div class="container-change-city-button">
+        <button class="change-city-button">Trocar Cidade</button>
+      </div>
+    </div>
+  </div>
+  <div class="container-line-between-left-right"></div>
+  <div class="container-right-chose-region-after-clicked">
+    <h1>Últimos Locais</h1>
+    <div class="container-last-places">
+      <%= render 'layouts/store/svg_circle' %>
+      <span>Campinas</span>
+    </div>
+  </div>
+</div>
